[package]
name = "gimtex"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
ignore = "0.4.23"
tiktoken-rs = "0.5.8"
arboard = "3.4.0"
glob = "0.3.1"
colored = "2.1.0"
regex = "1.10.4"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"

[profile.release]
lto = true
strip = true
codegen-units = 1
